--- a/css/estilo.css
+++ b/css/estilo.css
@@ -153,33 +153,15 @@ nav ul li{
 .flex-cont-texto .caja-texto h2 {
     margin: 0 auto;
     padding: 0;
-    display: flex;
-    max-width: 100%;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
-    font-size: 3.5vw;
+    font-size: 20px;
     letter-spacing: 5px;
 }
 
 
 .flex-cont-texto .caja-texto p {
-    margin: 0 auto;
-    padding: 15px 5px;
-    width: 70%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-    word-break: break-word;
-    overflow-wrap: break-word;
-    font-size: 1.4vw;
+    padding: 1px 1px;
+    font-size: 15px;
     letter-spacing: 1px;
-    
 }
 
 
@@ -231,7 +213,7 @@ nav ul li{
     justify-items: center;
     width: 100%;
     margin: 0;
-    padding: 5% 5%;
+    padding: 3px 3px;
 }
 
 .caja__general {
@@ -250,31 +232,15 @@ nav ul li{
 
 .caja h3 {
     margin: 0 auto;
-    padding: 5px 5px;
-    display: flex;
-    max-width: 80%;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    text-align: center;
-    font-size: 2vw;
+    padding: 3px 3px;
+    font-size: 20px;
     letter-spacing: 5px;
 }
 
 .caja p {
     margin: 0 auto;
-    padding: 15px 5px;
-    width: 80%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-    word-break: break-word;
-    overflow-wrap: break-word;
-    font-size: 1.4vw;
+    padding: 8px 3px;
+    font-size: 15px;
     letter-spacing: 1px;
 }
 
@@ -291,18 +257,18 @@ nav ul li{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 150px;
+    height: 100px;
     background-color: rgba(220, 220, 220, 0.151);
 }
 
 .cotizar {
     background-color: yellowgreen;
     color: #FFF;
-    padding: 15px 25px;
+    padding: 5px 10px;
     border: none;
     border-radius: 4px;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
     cursor: pointer;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.4);
@@ -802,4 +768,11 @@ display: block;
 
 .card-wrapper {
     column-gap: 8px;
+}
+
+@media screen and (max-width: 320px) {
+    h2, h3 {
+        font-size: 100px;
+    }
+    
 }
