--- a/css/estilo.css
+++ b/css/estilo.css
@@ -770,9 +770,64 @@ display: block;
     column-gap: 8px;
 }
 
-@media screen and (max-width: 320px) {
-    h2, h3 {
-        font-size: 100px;
-    }
-    
+/* Guia comprar serguro */
+
+.container__guia {  display: grid;
+grid-template-columns: 3fr 1fr 3fr;
+grid-template-rows: 1fr 1fr 1fr 1fr;
+gap: 0px 0px;
+grid-auto-flow: row;
+grid-template-areas:
+    "img1 numero1 texto1"
+    "texto2 numero2 img2"
+    "img3 numero3 texto3"
+    "texto4 numero4 img4";
 }
+
+.img1 { grid-area: img1; }
+
+.numero1 { 
+    grid-area: numero1;
+    font-family: 'DM Serif Display', serif;
+    font-size: 100px;
+    color: darkcyan;
+    margin: 0 auto;
+}
+
+.texto1 { grid-area: texto1; }
+
+.texto2 { grid-area: texto2; }
+
+.numero2 { 
+    grid-area: numero2;
+    font-family: 'DM Serif Display', serif;
+    font-size: 100px;
+    color: darkcyan;
+    margin: 0 auto; 
+}
+
+.img2 { grid-area: img2; }
+
+.img3 { grid-area: img3; }
+
+.numero3 {
+    grid-area: numero3;
+    font-family: 'DM Serif Display', serif;
+    font-size: 100px;
+    color: darkcyan;
+    margin: 0 auto;
+}
+
+.texto3 { grid-area: texto3; }
+
+.texto4 { grid-area: texto4; }
+
+.numero4 {
+    grid-area: numero4;
+    font-family: 'DM Serif Display', serif;
+    font-size: 100px;
+    color: darkcyan;
+    margin: 0 auto;
+}
+
+.img4 { grid-area: img4; }
