--- a/css/estilo.css
+++ b/css/estilo.css
@@ -772,16 +772,19 @@ display: block;
 
 /* Guia comprar serguro */
 
-.container__guia {  display: grid;
-grid-template-columns: 3fr 1fr 3fr;
-grid-template-rows: 1fr 1fr 1fr 1fr;
-gap: 0px 0px;
-grid-auto-flow: row;
-grid-template-areas:
-    "img1 numero1 texto1"
-    "texto2 numero2 img2"
-    "img3 numero3 texto3"
-    "texto4 numero4 img4";
+.container__guia {
+    margin: 0 auto;
+    padding: 10px 10px;
+    display: grid;
+    grid-template-columns: 3fr 1fr 3fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    gap: 10px 10px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "img1 numero1 texto1"
+        "texto2 numero2 img2"
+        "img3 numero3 texto3"
+        "texto4 numero4 img4";
 }
 
 .img1 { grid-area: img1; }
