--- a/css/estilo.css
+++ b/css/estilo.css
@@ -69,6 +69,8 @@ nav ul li{
     line-height: 4.2;
 } 
 
+
+
 /* banner página principal index.html */
 .contenedor2 .fondo .banner1 .fotoBan {
     display: flex;
@@ -127,7 +129,6 @@ nav ul li{
     width: 70%;
     margin: 0;
     padding: 5% 10%;
-
     background-image: url(../Img/FondoBase.png);
     background-size: cover;
     background-position: center;
@@ -153,21 +154,20 @@ nav ul li{
 .flex-cont-texto .caja-texto h2 {
     margin: 0 auto;
     padding: 0;
-    font-size: 20px;
+    font-size: 25px;
     letter-spacing: 5px;
 }
 
 
 .flex-cont-texto .caja-texto p {
     padding: 1px 1px;
-    font-size: 15px;
+    font-size: 20px;
     letter-spacing: 1px;
 }
 
 
 .flex-cont-texto .caja-texto .logo__seg__fami img {
-    min-width: 10%;
-    max-width: 20%;
+    width: 100px;
     margin: 0 auto;
     padding: 0 auto;
 }
@@ -245,8 +245,7 @@ nav ul li{
 }
 
 .caja img{
-    min-width: 10%;
-    max-width: 20%;
+    width: 100px;
     margin: 0 auto;
     padding: 0 auto; 
 }
@@ -258,7 +257,8 @@ nav ul li{
     justify-content: center;
     align-items: center;
     height: 100px;
-    background-color: rgba(220, 220, 220, 0.151);
+    /* background-color: rgba(220, 220, 220, 0.151); */
+    background-color:whitesmoke;
 }
 
 .cotizar {
@@ -280,7 +280,7 @@ nav ul li{
 
 
 
-/* footer general del proyecto*/
+/* footer general del proyecto */
 
 .pie-pagina {
     width: 100%;
@@ -304,6 +304,7 @@ nav ul li{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     text-align: center;
     color: white;
 }
@@ -354,6 +355,7 @@ nav ul li{
     color: white;
     font-size: 1.2rem;
 }
+
 
 /* TERMINOS */
 
@@ -412,38 +414,14 @@ nav ul li{
     margin: 0 auto;
 }
 
-.nos__container {
-    width: 80%;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 50px 50px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    background-color: #f4f4f4;
-    
+.container {
+    font-family: 'Bebas Neue', sans-serif;
 }
 
-.nos__container h2 {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-    letter-spacing: 2px;
+h2, h3, p {
+    text-align: center; 
 }
 
-.nos__container p {
-    font-size: 1.2rem;
-    margin-bottom: 15px;
-    line-height: 1.6;
-}
-
-.nos__container iframe{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 auto;
-    padding: 20px 20px;
-}
 
 /* Efectos servicios.html */
 
@@ -452,7 +430,7 @@ nav ul li{
     background-image: url(../Img/FondoBase.png);
     background-size: 100%;
     background-position: center center;
-    background-color: #f4f4f4;
+    background-color: #000000;
     padding: 50px 0;
 }
 
@@ -487,9 +465,6 @@ nav ul li{
     margin-bottom: 30px;
     padding: 20px;
     background-color: #cccccc3f;
-    /* background-color: #20bf55;
-    background-image: linear-gradient(315deg, #20bf55 0%, #01baef 74%); */
-
 }
 
 
@@ -772,12 +747,22 @@ display: block;
 
 /* Guia comprar serguro */
 
+.guia__cotizar {
+    margin: 0 auto;
+    padding: 30px 30px;
+    background-color: whitesmoke;
+    text-align: center;
+    font-size: 35px;
+    letter-spacing: 0.6rem;
+}
 .container__guia {
     margin: 0 auto;
+    background-color: white;
+    height: 1000px;
     padding: 10px 10px;
     display: grid;
     grid-template-columns: 3fr 1fr 3fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 2fr 2fr 2fr 2fr;
     gap: 10px 10px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -787,43 +772,157 @@ display: block;
         "texto4 numero4 img4";
 }
 
-.img1 { grid-area: img1; }
+.img1 {
+    grid-area: img1;
+    margin: 0 auto;
+}
 
-.numero1 { 
+.numero1 {
     grid-area: numero1;
+    position: relative;
     font-family: 'DM Serif Display', serif;
     font-size: 100px;
     color: darkcyan;
     margin: 0 auto;
+    padding: 0px 0px 20px;
+    z-index: 2;
 }
 
-.texto1 { grid-area: texto1; }
+.numero1 p {
+    position: relative;
+    margin: 0;
+    z-index: 0;
+    text-align: center;
+}
 
-.texto2 { grid-area: texto2; }
+.dotted-line-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: calc(100% - 100px);
+    z-index: -1;
+}
 
-.numero2 { 
+.dotted-line-container::after {
+    content: "";
+    background: linear-gradient(rgba(75, 75, 75, 0.671) 50%, transparent 50%);
+    background-size: 5px 10px; /* Ajusta según el tamaño y el espaciado de los puntos que desees */
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    width: 5px; /* Ancho de la línea de puntos */
+    transform: translateX(-50%); /* Centrar la línea horizontalmente */
+}
+
+
+
+
+.texto1 {
+    grid-area: texto1;
+    margin: 0 auto;
+}
+
+.texto2 {
+    grid-area: texto2;
+    margin: 0 auto;
+}
+
+.numero2 {
     grid-area: numero2;
+    position: relative;
     font-family: 'DM Serif Display', serif;
     font-size: 100px;
     color: darkcyan;
-    margin: 0 auto; 
+    margin: 0 auto;
+    padding: 0px 0px 20px;
+    z-index: 2;
 }
 
-.img2 { grid-area: img2; }
+.numero2 p {
+    position: relative;
+    margin: 0;
+    z-index: 0;
+    text-align: center;
+}
 
-.img3 { grid-area: img3; }
+.dotted-line-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: calc(100% - 100px);
+    z-index: -1;
+}
+
+.dotted-line-container::after {
+    content: "";
+    background: linear-gradient(rgba(75, 75, 75, 0.671) 50%, transparent 50%);
+    background-size: 5px 10px; /* Ajusta según el tamaño y el espaciado de los puntos que desees */
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    width: 5px; /* Ancho de la línea de puntos */
+    transform: translateX(-50%); /* Centrar la línea horizontalmente */
+}
+
+.img2 {
+    grid-area: img2;
+    margin: 0 auto;
+}
+
+.img3 {
+    grid-area: img3;
+    margin: 0 auto;
+}
 
 .numero3 {
     grid-area: numero3;
+    position: relative;
     font-family: 'DM Serif Display', serif;
     font-size: 100px;
     color: darkcyan;
     margin: 0 auto;
+    padding: 0px 0px 20px;
+    z-index: 2;
 }
 
-.texto3 { grid-area: texto3; }
+.numero3 p {
+    position: relative;
+    margin: 0;
+    z-index: 0;
+    text-align: center;
+}
 
-.texto4 { grid-area: texto4; }
+.dotted-line-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: calc(100% - 100px);
+    z-index: -1;
+}
+
+.dotted-line-container::after {
+    content: "";
+    background: linear-gradient(rgba(75, 75, 75, 0.671) 50%, transparent 50%);
+    background-size: 5px 10px; /* Ajusta según el tamaño y el espaciado de los puntos que desees */
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    width: 5px; /* Ancho de la línea de puntos */
+    transform: translateX(-50%); /* Centrar la línea horizontalmente */
+}
+
+.texto3 {
+    grid-area: texto3;
+    margin: 0 auto;
+}
+
+.texto4 {
+    grid-area: texto4;
+    margin: 0 auto;
+}
 
 .numero4 {
     grid-area: numero4;
@@ -833,4 +932,67 @@ display: block;
     margin: 0 auto;
 }
 
-.img4 { grid-area: img4; }
+.img4 {
+    grid-area: img4;
+    margin: 0 auto;
+}
+
+@media (min-width: 992px) {
+    
+}
+
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    
+}
+
+/* Estilos para Small (<768px) */
+@media (max-width: 767.98px) {
+    .pie-pagina .grupo-1 {
+        grid-template-columns: 1fr;
+    }
+
+    .pie-pagina .grupo-1 .box {
+        height: 100%;
+    }
+    
+    .nosotros .container{
+        align-content: center;
+    }
+
+}
+
+
+@media (max-width: 575.98px) {
+    .container h2, 
+    .container h3, 
+    .container p {
+        font-size: 0.9rem;
+    }
+    .pie-pagina .grupo-1 {
+        grid-template-columns: 1fr;
+    }
+
+    .pie-pagina .grupo-1 .box {
+        height: 100%;
+    }
+    .navbar-toggler {
+        display: block;
+        background-color: white;
+        border: none;
+    }
+    .navbar-toggler-icon {
+        background-color: #3d16c7; /* Color del ícono de hamburguesa */
+    }
+    .header__menu {
+        text-align: center;
+    }
+    .header__item {
+        padding: 10px 0;
+    }
+    .img__header {
+        width: 150px; /* Tamaño ajustado del logo en pantallas pequeñas */
+    }
+    
+}
+
