--- a/css/estilo.css
+++ b/css/estilo.css
@@ -144,19 +144,23 @@ p{
     padding: 20px 20px;
     background-color: white;
     max-width: 992px;
-    min-height: auto;
+    max-height: min-content;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    grid-auto-flow: row;
+    grid-template-rows: repeat(5, auto);
+    grid-gap: 20px;
     grid-template-areas:
         "logo__servi"
         "title1"
         "p1"
         "title2"
         "p2";
+    justify-content: center;
     align-content: center;
-    align-items: center;
+}
+
+.caja-texto h2, h3 {
+    margin: 0 auto;
 }
 
 .logo__servi {
@@ -265,7 +269,6 @@ p{
     justify-content: center;
     align-items: center;
     height: 100px;
-    background-color:whitesmoke;
 }
 
 .cotizar {
@@ -533,7 +536,6 @@ p{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: auto;
     background-image: url(../Img/FondoBase.png);
     background-size: 100%;
     background-position: center center;
@@ -636,7 +638,8 @@ p{
 }
 
 form {
-    width: 400px;
+    max-width: 400px;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -720,8 +723,6 @@ input[type="submit"]:hover {
     margin-top: 10px;
 }
 
-/* Trate de hacer una lista de selección de viajeros, y que a su vez, de acuerdo a la cantidad de viajeros seleccionados aparezca la ventana para la indicación de edad de cada uno, pero supe como hacerlo */
-
 .casillas-edad > div {
 display: none;
 }
@@ -764,10 +765,10 @@ display: block;
     font-size: 35px;
     letter-spacing: 0.6rem;
 }
+
 .container__guia {
     margin: 0 auto;
     background-color: white;
-    min-height: auto;
     padding: 10px 10px;
     display: grid;
     grid-template-columns: 3fr 1fr 3fr;
@@ -779,6 +780,12 @@ display: block;
         "texto2 numero2 img2"
         "img3 numero3 texto3"
         "texto4 numero4 img4";
+}
+
+.texto1, .texto2, .texto3, .texto4 {
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
 }
 
 .img1 {
@@ -951,6 +958,19 @@ display: block;
         font-size: 14px;
         margin: 0 7px;
     }
+
+    .telefono-container {
+        flex-direction: column;
+    }
+
+    .telefono-container select {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .edades-container {
+        flex-direction: column;
+    }
 }
 
 
@@ -1015,9 +1035,26 @@ display: block;
         transition: transform 0.3s;
         font-size: 20px;
     }
+
+    .nav-menu li {
+        font-size: 28px;
+    }
     
     .nav-menu_visible {
         transform: translateX(0);
+    }
+
+    .telefono-container {
+        flex-direction: column;
+    }
+
+    .telefono-container select {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .edades-container {
+        flex-direction: column;
     }
 
     /* Cambio guía compra seguro */
@@ -1033,7 +1070,6 @@ display: block;
     .container__guia {
         margin: 0 auto;
         background-color: white;
-        min-height: auto;
         padding: 10px 10px; 
         display: grid;
         grid-template-columns: 1fr 3fr 3fr;
@@ -1047,171 +1083,7 @@ display: block;
             "numero4 img4 texto4";
     }
     
-    .img1 {
-        grid-area: img1;
-        margin: 0 auto;
-    }
     
-    .numero1 {
-        grid-area: numero1;
-        position: relative;
-        font-family: 'DM Serif Display', serif;
-        font-size: 100px;
-        color: darkcyan;
-        margin: 0 auto;
-        padding: 0px 0px 20px;
-        z-index: 2;
-    }
-    
-    .numero1 p {
-        position: relative;
-        margin: 0;
-        z-index: 0;
-        text-align: center;
-    }
-    
-    .dotted-line-container {
-        position: relative;
-        display: flex;
-        align-items: center;
-        height: calc(100% - 100px);
-        z-index: -1;
-    }
-    
-    .dotted-line-container::after {
-        content: "";
-        background: linear-gradient(rgba(75, 75, 75, 0.671) 50%, transparent 50%);
-        background-size: 5px 10px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 50%;
-        width: 5px; /* Ancho de la línea de puntos */
-        transform: translateX(-50%);
-    }
-
-    .texto1 {
-        grid-area: texto1;
-        margin: 0 auto;
-        padding: 25px 10px;
-    }
-    
-    .texto2 {
-        grid-area: texto2;
-        margin: 0 auto;
-        padding: 25px 10px;
-    }
-    
-    .numero2 {
-        grid-area: numero2;
-        position: relative;
-        font-family: 'DM Serif Display', serif;
-        font-size: 100px;
-        color: darkcyan;
-        margin: 0 auto;
-        padding: 0px 0px 20px;
-        z-index: 2;
-    }
-    
-    .numero2 p {
-        position: relative;
-        margin: 0;
-        z-index: 0;
-        text-align: center;
-    }
-    
-    .dotted-line-container {
-        position: relative;
-        display: flex;
-        align-items: center;
-        height: calc(100% - 100px);
-        z-index: -1;
-    }
-    
-    .dotted-line-container::after {
-        content: "";
-        background: linear-gradient(rgba(75, 75, 75, 0.671) 50%, transparent 50%);
-        background-size: 5px 10px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 50%;
-        width: 5px; /* Ancho de la línea de puntos */
-        transform: translateX(-50%);
-    }
-    
-    .img2 {
-        grid-area: img2;
-        margin: 0 auto;
-    }
-    
-    .img3 {
-        grid-area: img3;
-        margin: 0 auto;
-    }
-    
-    .numero3 {
-        grid-area: numero3;
-        position: relative;
-        font-family: 'DM Serif Display', serif;
-        font-size: 100px;
-        color: darkcyan;
-        margin: 0 auto;
-        padding: 0px 0px 20px;
-        z-index: 2;
-    }
-    
-    .numero3 p {
-        position: relative;
-        margin: 0;
-        z-index: 0;
-        text-align: center;
-    }
-    
-    .dotted-line-container {
-        position: relative;
-        display: flex;
-        align-items: center;
-        height: calc(100% - 100px);
-        z-index: -1;
-    }
-    
-    .dotted-line-container::after {
-        content: "";
-        background: linear-gradient(rgba(75, 75, 75, 0.671) 50%, transparent 50%);
-        background-size: 5px 10px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 50%;
-        width: 5px; /* Ancho de la línea de puntos */
-        transform: translateX(-50%);
-    }
-    
-    .texto3 {
-        grid-area: texto3;
-        margin: 0 auto;
-        padding: 25px 10px;
-    }
-    
-    .texto4 {
-        grid-area: texto4;
-        margin: 0 auto;
-        padding: 25px 10px;
-    }
-    
-    .numero4 {
-        grid-area: numero4;
-        font-family: 'DM Serif Display', serif;
-        font-size: 100px;
-        color: darkcyan;
-        margin: 0 auto;
-    }
-    
-    .img4 {
-        grid-area: img4;
-        margin: 0 auto;
-    }
 }
 
 
@@ -1222,6 +1094,10 @@ display: block;
 
     .franja h3 {
         font-size: 15px;
+    }
+
+    .nav-menu li {
+        font-size: 24px;
     }
 
     .caja-texto img {
@@ -1258,7 +1134,6 @@ display: block;
     .container__guia {
         margin: 0 auto;
         background-color: white;
-        min-height: auto;
         padding: 10px 10px;
         display: grid;
         grid-template-columns: 1fr 3fr;
@@ -1273,7 +1148,7 @@ display: block;
             "numero3 img3"
             "numero3 texto3"
             "numero4 img4"
-            "numero4 texto4";
+            "numero4 texto4";        
     }
 
     .logo img{
