--- a/css/estilo.css
+++ b/css/estilo.css
@@ -373,39 +373,51 @@ p{
 
 .terminos {
     width: 100%;
-    max-width: 800px;
     margin: 0 auto;
     padding: 40px;
-    background-color: #f2f2f2;
-    box-shadow: 0px 1px 10px rgba(0,0,0,0.4);
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.4);    
 }
 
 .terminos h2 {
-    margin-bottom: 20px;
-    font-size: 30px;
+    margin-bottom: 40px;
+    font-size: 35px;
     font-weight: bold;
     text-align: center;
     letter-spacing: 2px;
+    text-transform: uppercase;
 }
 
 .terminos ol {
+    padding-left: 25px;
+    list-style-type: none;
     padding-left: 20px;
+    font-size: 30px;
 }
 
 .terminos li {
     margin-bottom: 30px;
+    font-size: 30px;
 }
 
 .terminos h3 {
-    margin-bottom: 10px;
-    font-size: 20px;
+    margin-bottom: 20px;
+    font-size: 25px;
     font-weight: bold;
     letter-spacing: 2px;
+    padding: 30px 10px;
+    text-transform: uppercase;
 }
 
 .terminos p {
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: 18px;
+    line-height: 1.7;
+    text-align: justify;
+}
+
+.terminos h2, .terminos h3, .terminos ol, .terminos li, .terminos p {    
+    max-width: 992px;
+    margin: 0 auto;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* Efectos nosotros.html */
@@ -878,7 +890,7 @@ display: block;
     top: 0;
     bottom: 0;
     left: 50%;
-    width: 5px; /* Ancho de la línea de puntos */
+    width: 5px;
     transform: translateX(-50%);
 }
 
@@ -971,6 +983,14 @@ display: block;
     .edades-container {
         flex-direction: column;
     }
+
+    .terminos {
+        max-width: 850px;
+    }
+
+    .terminos h3 {
+        text-align: center;
+    }
 }
 
 
@@ -1055,6 +1075,14 @@ display: block;
 
     .edades-container {
         flex-direction: column;
+    }
+
+    .terminos {
+        max-width: 780px;
+    }
+
+    .terminos h3 {
+        text-align: center;
     }
 
     /* Cambio guía compra seguro */
@@ -1161,6 +1189,15 @@ display: block;
     .nav-toggle {
         display: block;
         margin-right: 20px;
+    }
+
+    .terminos {
+        max-width: 650px;
+        padding: 20px;
+    }
+
+    .terminos h3 {
+        text-align: center;
     }
 }
 
