--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,6 +18,9 @@ h3 {
 p {
   font-family: "Montserrat", sans-serif; }
 
+ul {
+  font-family: "Montserrat", sans-serif; }
+
 .header {
   background-color: blue;
   height: 80px;
@@ -26,71 +29,49 @@ p {
   top: 0;
   left: 0;
   z-index: 1000; }
+  .header .nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 992px;
+    margin: 0 auto;
+    height: 100%;
+    padding: 0 20px; }
+    .header .nav .nav-link {
+      color: white;
+      text-decoration: none;
+      white-space: nowrap; }
+    .header .nav .logo img {
+      width: 170px;
+      display: block;
+      padding: 0 10px;
+      line-height: 80px; }
+    .header .nav .nav-menu {
+      display: flex;
+      list-style: none;
+      padding: 0;
+      margin: 0; }
+      .header .nav .nav-menu .nav-menu-item {
+        font-size: 15px;
+        margin: 0 10px;
+        white-space: nowrap; }
+        .header .nav .nav-menu .nav-menu-item .nav-menu-link {
+          padding: 8px 9px;
+          border-radius: 5px; }
+          .header .nav .nav-menu .nav-menu-item .nav-menu-link:hover {
+            border-bottom: 4px solid greenyellow;
+            background-color: white;
+            border-radius: 5px;
+            transition: 0.5s;
+            color: blue; }
 
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 992px;
-  margin: 0 auto;
-  height: 100%;
-  padding: 0 20px; }
-
-.nav-link, .nav-toggle {
+.nav-toggle {
   color: white;
-  text-decoration: none;
-  white-space: nowrap; }
-
-.nav-link:hover {
-  border-bottom: 4px solid greenyellow;
-  background-color: white;
-  border-radius: 5px;
-  transition: 0.5s;
-  color: blue; }
-
-.nav-toggle {
-  background: none;
   border: none;
-  font-size: 30px;
-  cursor: pointer;
-  display: none; }
-
-.logo img {
-  width: 170px;
-  display: block;
-  padding: 0 10px;
-  line-height: 80px; }
-
-.nav li {
-  font-family: "Montserrat", sans-serif; }
-
-.nav-menu {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0; }
-
-.nav-menu-item {
-  font-size: 15px;
-  margin: 0 10px; }
-
-.nav-menu-link {
-  padding: 8px 9px;
-  border-radius: 5px; }
-  .nav-menu-link:hover {
-    border-bottom: 4px solid greenyellow;
-    background-color: white;
-    border-radius: 5px;
-    transition: 0.5s;
-    color: blue; }
-
-.nav-toggle {
-  color: blue;
   background: none;
-  border: none;
-  font-size: 30px;
-  cursor: pointer;
-  display: none; }
+  display: none;
+  margin-right: 60px;
+  font-size: 30px; }
 
 .contenedor2 .fondo .banner1 .fotoBan {
   display: flex;
@@ -319,7 +300,7 @@ p {
     letter-spacing: 2px;
     text-transform: uppercase; }
   .terminos ol {
-    padding-left: 25px;
+    padding-left: 0;
     list-style-type: none;
     font-size: 30px; }
   .terminos li {
@@ -351,9 +332,12 @@ p {
   padding: 50px;
   margin: 0 auto;
   font-family: "Bebas Neue", sans-serif;
-  text-align: center; }
+  text-align: justify; }
   .nosotros h2 {
-    font-size: 50px; }
+    font-size: 50px;
+    text-align: center; }
+  .nosotros h2 {
+    text-align: center; }
 
 /* Pag Servicios */
 .main__servicios {
@@ -655,27 +639,80 @@ input[type="submit"] {
     transform: translateX(-51%); }
 
 /* Media Query */
-/* Estilos para Medium (797px - 857px) */
-@media (min-width: 797px) and (max-width: 857px) {
+@media (min-width: 797px) and (max-width: 873px) {
   .nav-menu-item {
     font-size: 14px;
     margin: 0 7px; }
+  .nav-toggle {
+    color: white;
+    display: block;
+    margin-right: 60px;
+    border: none;
+    background-color: none;
+    font-size: 30px; }
+  .nav-menu {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    background-color: #3d16c7;
+    position: fixed;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    padding: 30px 0;
+    height: calc(100% - 80px);
+    overflow-y: auto;
+    transform: translateX(100%);
+    transition: transform 0.3s; }
+    .nav-menu li {
+      font-size: 28px; }
+    .nav-menu_visible {
+      transform: translateX(0); }
   .telefono-container,
   .edades-container {
     flex-direction: column; }
-  .telefono-container select,
-  .edades-container select {
-    margin-right: 0;
-    margin-bottom: 10px; }
+    .telefono-container select,
+    .edades-container select {
+      margin-right: 0;
+      margin-bottom: 10px; }
   .terminos {
+    text-align: justify;
     max-width: 850px; }
-  .terminos h3 {
-    text-align: center; } }
+    .terminos h2, .terminos h3, .terminos li {
+      text-align: center; }
+    .terminos p {
+      margin: 0 auto; }
+    .terminos ol {
+      padding: 0; } }
 
-/* Estilos para Small (<797px) */
 @media (max-width: 796.98px) {
   body {
     margin-top: 60px; }
+  .caja-texto img {
+    width: 180px; }
+  .franja h3 {
+    font-size: 20px; }
+  .pie-pagina .grupo-1 {
+    grid-template-columns: 1fr; }
+    .pie-pagina .grupo-1 .box {
+      height: 100%; }
+  .nosotros .container {
+    align-content: center;
+    text-align: justify; }
+    .nosotros .container h2 {
+      font-size: 45px;
+      text-align: center; }
+    .nosotros .container h3 {
+      text-align: center; }
+  .header {
+    height: 60px; }
+  .logo img {
+    width: 160px;
+    padding: 0 20px;
+    line-height: 60px; }
+  .nav-toggle {
+    display: block;
+    margin-right: 60px; }
   .nav-menu {
     flex-direction: column;
     align-items: center;
@@ -691,42 +728,26 @@ input[type="submit"] {
     transform: translateX(100%);
     transition: transform 0.3s;
     font-size: 20px; }
-  .nav-menu li {
-    font-size: 28px; }
-  .nav-menu_visible {
-    transform: translateX(0); }
+    .nav-menu li {
+      font-size: 28px; }
+    .nav-menu_visible {
+      transform: translateX(0); }
   .telefono-container,
   .edades-container {
     flex-direction: column; }
-  .telefono-container select,
-  .edades-container select {
-    margin-right: 0;
-    margin-bottom: 10px; }
+    .telefono-container select,
+    .edades-container select {
+      margin-right: 0;
+      margin-bottom: 10px; }
   .terminos {
-    max-width: 780px; }
-  .terminos h3,
-  .caja-texto img {
-    text-align: center;
-    width: 180px; }
-  .franja h3 {
-    font-size: 20px; }
-  .pie-pagina .grupo-1 {
-    grid-template-columns: 1fr; }
-  .pie-pagina .grupo-1 .box {
-    height: 100%; }
-  .nosotros .container {
-    align-content: center; }
-  .nosotros h2 {
-    font-size: 45px; }
-  .header {
-    height: 60px; }
-  .logo img {
-    width: 160px;
-    padding: 0 20px;
-    line-height: 60px; }
-  .nav-toggle {
-    display: block;
-    margin-right: 60px; }
+    max-width: 780px;
+    text-align: justify; }
+    .terminos h2, .terminos h3 {
+      text-align: center; }
+    .terminos li, .terminos p {
+      margin: 0 auto; }
+    .terminos ol {
+      padding: 0; }
   .guia__cotizar {
     margin: 0 auto;
     padding: 30px 30px;
@@ -745,22 +766,37 @@ input[type="submit"] {
     grid-auto-flow: row;
     grid-template-areas: "numero1 img1 texto1" "numero2 img2 texto2" "numero3 img3 texto3" "numero4 img4 texto4"; } }
 
-/* Estilos adicionales para Small (<660px) */
 @media (max-width: 660px) {
+  body {
+    margin-top: 60px; }
   .franja h3 {
-    font-size: 15px; }
+    font-size: 12px;
+    padding: 0;
+    letter-spacing: 1px; }
   .nav-menu li {
     font-size: 24px; }
   .caja-texto img {
     width: 150px; }
+  .flex-cont-texto h2, .flex-cont-texto h3, .flex-cont-texto p {
+    text-align: center;
+    justify-content: center;
+    padding: 10px 0; }
   .container h2 {
     font-size: 40px; }
   .container h3 {
     font-size: 25px; }
   .container p {
     font-size: 20px; }
+  .caja__general h2 {
+    font-size: 20px; }
+  .caja__general h3 {
+    font-size: 18px; }
+  .caja__general p {
+    font-size: 15px; }
   .pie-pagina .grupo-1 {
     grid-template-columns: 1fr; }
+    .pie-pagina .grupo-1 .box {
+      height: 100%; }
   .guia__cotizar {
     margin: 0 auto;
     padding: 20px 20px;
@@ -775,6 +811,7 @@ input[type="submit"] {
     grid-template-columns: 1fr 3fr;
     grid-template-rows: repeat(8, 1fr);
     gap: 10px 10px;
+    grid-auto-flow: row;
     grid-template-areas: "numero1 img1" "numero1 texto1" "numero2 img2" "numero2 texto2" "numero3 img3" "numero3 texto3" "numero4 img4" "numero4 texto4"; }
   .logo img {
     width: 100px;
@@ -782,7 +819,26 @@ input[type="submit"] {
     margin-right: 20px;
     line-height: 60px; }
   .nav-toggle {
+    display: block;
     margin-right: 20px; }
   .terminos {
     max-width: 650px;
-    padding: 20px; } }
+    padding: 20px;
+    margin: 0 auto;
+    text-align: justify; }
+    .terminos h2, .terminos h3 {
+      text-align: center; }
+    .terminos li, .terminos p {
+      margin: 0 auto; }
+    .terminos ol {
+      padding: 0; }
+  .nosotros {
+    top: 60px;
+    margin: 0 auto;
+    padding: 0; }
+    .nosotros h2 {
+      font-size: 20px; }
+    .nosotros h3 {
+      font-size: 18px; }
+    .nosotros p {
+      font-size: 15px; } }
