--- a/css/estilo.css
+++ b/css/estilo.css
@@ -114,7 +114,7 @@ ul {
 .caja-texto {
   margin: 0 auto;
   padding: 20px 20px;
-  background-color: white;
+  background: none;
   max-width: 992px;
   max-height: min-content;
   display: grid;
@@ -336,7 +336,7 @@ ul {
   .nosotros h2 {
     font-size: 50px;
     text-align: center; }
-  .nosotros h2 {
+  .nosotros h3 {
     text-align: center; }
 
 /* Pag Servicios */
@@ -409,7 +409,7 @@ ul {
   background-position: center center;
   background-color: white;
   padding: 50px 0;
-  font-family: "Inter", sans-serif; }
+  font-family: "Montserrat", sans-serif; }
 
 .formulario {
   background-color: white;
@@ -418,8 +418,7 @@ ul {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); }
   .formulario h2 {
     margin-bottom: 20px;
-    text-align: center;
-    color: #3d16c7; }
+    text-align: center; }
   .formulario label {
     display: block;
     font-weight: bold;
@@ -439,6 +438,7 @@ ul {
     margin-right: 5px; }
   .formulario input[type="submit"],
   .formulario input[type="reset"] {
+    margin: 5px 0;
     width: 100%;
     padding: 10px;
     border: none;
@@ -466,7 +466,7 @@ ul {
 /* efectos cotizador.html*/
 /* Estilos generales */
 .coti__body {
-  font-family: "Inter", sans-serif;
+  font-family: "Bebas Neue", sans-serif;
   margin: 0;
   padding: 0; }
   .coti__body h2 {
@@ -477,7 +477,8 @@ ul {
 form {
   max-width: 400px;
   width: 100%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  font-family: "Montserrat", sans-serif; }
 
 .form-group {
   margin-bottom: 20px; }
