--- a/css/estilo.css
+++ b/css/estilo.css
@@ -639,6 +639,54 @@ input[type="submit"] {
     width: 5px;
     transform: translateX(-51%); }
 
+/* error 404 */
+.body-404 {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: whitesmoke;
+  width: 100%;
+  height: 100%;
+  display: block; }
+
+.main-404 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%; }
+  .main-404 .error-404 {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .main-404 .img-404 {
+    display: block;
+    width: 90%;
+    margin-bottom: 20px;
+    margin: 10px; }
+  .main-404 h1 {
+    display: none; }
+  .main-404 h2 {
+    font-family: "Montserrat", sans-serif;
+    margin-bottom: 20px;
+    max-width: 992px;
+    margin: 10px;
+    font-size: 25px; }
+  .main-404 button {
+    border: none;
+    color: white;
+    background: mediumaquamarine;
+    margin: 10px;
+    padding: 10px 20px;
+    border-radius: 15px;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: 18px; }
+    .main-404 button:hover {
+      background-color: #0000cc; }
+
 /* Media Query */
 @media (min-width: 797px) and (max-width: 873px) {
   .nav-menu-item {
@@ -684,7 +732,11 @@ input[type="submit"] {
     .terminos p {
       margin: 0 auto; }
     .terminos ol {
-      padding: 0; } }
+      padding: 0; }
+  .main-404 h2 {
+    font-size: 20px; }
+  .main-404 button {
+    font-size: 16px; } }
 
 @media (max-width: 796.98px) {
   body {
@@ -765,7 +817,17 @@ input[type="submit"] {
     grid-template-rows: 2fr 2fr 2fr 2fr;
     gap: 5px 7px;
     grid-auto-flow: row;
-    grid-template-areas: "numero1 img1 texto1" "numero2 img2 texto2" "numero3 img3 texto3" "numero4 img4 texto4"; } }
+    grid-template-areas: "numero1 img1 texto1" "numero2 img2 texto2" "numero3 img3 texto3" "numero4 img4 texto4"; }
+  .main-404 h2 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 25px;
+    margin-bottom: 10px;
+    margin: 8px; }
+  .main-404 button {
+    margin: 10px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 12px; } }
 
 @media (max-width: 660px) {
   body {
@@ -842,4 +904,8 @@ input[type="submit"] {
     .nosotros h3 {
       font-size: 18px; }
     .nosotros p {
-      font-size: 15px; } }
+      font-size: 15px; }
+  .main-404 h2 {
+    font-size: 18px; }
+  .main-404 button {
+    font-size: 10px; } }
