--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -788,5 +788,68 @@ input[type="submit"] {
     }
 }
 
+/* error 404 */
+
+.body-404 {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: whitesmoke;
+    width: 100%;
+    height: 100%;
+    display: block;
+} 
+
+.main-404 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    .error-404 {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .img-404 {
+        display: block;
+        width: 90%;
+        margin-bottom: 20px;
+        margin: 10px;
+    }
+
+    h1 {
+        display: none;
+    }
+
+    h2 {
+        font-family: $font-secondary;
+        margin-bottom: 20px;
+        max-width: 992px;
+        margin: 10px;
+        font-size: 25px;
+    }
+
+    button {
+        border: none;
+        color: $color1;
+        background: mediumaquamarine;
+        margin: 10px;
+        padding: 10px 20px;
+        border-radius: 15px;
+        letter-spacing: 1px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        font-size: 18px;
+
+        &:hover {
+            background-color: darken($color2, 10%);
+        }
+    }
+}
+
 
 @import "media";
