--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -140,7 +140,7 @@ ul {
         font-style: italic;
         word-spacing: 18px;
         letter-spacing: 4px;
-        font-size: 1.5rem;
+        font-size: 30px;
         color: $yellow;
         overflow: hidden;
     }
