--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -96,22 +96,17 @@ ul {
     font-size: 30px;
 }
 
-.contenedor2 {
-	.fondo {
-		.banner1 {
-			.fotoBan {
-				display: flex;
-				flex-direction: row;
-				flex-wrap: wrap;
-				margin: 0 auto;
-				justify-content: flex-start;
-				align-items: flex-start;
-				align-content: space-around;
-				width: 100%;
-				box-shadow: 0px 1px 10px rgba(0,0,0,0.4);
-			}
-		}
-	}
+
+.fotoBan {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: space-around;
+    width: 100%;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.4);
 }
 
 .main {
@@ -158,11 +153,14 @@ ul {
 	grid-gap: 20px;
 	grid-template-areas: "logo__servi" "title1" "p1" "title2" "p2";
 	justify-content: center;
-	align-content: center;
-	h2 {
+    text-align: center;
+	
+    h2 {
 		margin: 0 auto;
+        
 	}
-	img {
+	
+    img {
 		width: 200px;
 	}
 }
@@ -227,6 +225,7 @@ ul {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+    max-width: 992px;
 }
 
 .caja {
@@ -468,6 +467,10 @@ ul {
     }
 }
 
+.container__guia img {
+    width: 150px;
+}
+
 .ser__container {
     display: flex;
     flex-wrap: wrap;
@@ -517,6 +520,19 @@ ul {
             letter-spacing: 2px;
         }
     }
+}
+
+.accordion-button:focus {
+    box-shadow: none;
+    border-color: inherit;
+}
+
+.accordion-button:not(.collapsed) {
+    background-color: inherit;
+}
+
+.accordion-body {
+    font-family: $font-secondary;
 }
 
 /* Pag Contacto */
